--- a/docs/main.tex
+++ b/docs/main.tex
@@ -52,6 +52,11 @@
 
 \newpage
 
+\tableofcontents % Generates the table of contents
+\newpage
+\listoffigures   % Generates the list of figures
+\newpage
+
 %----------------------------------------------------------------------------------------
 %	QUESTION 1
 %----------------------------------------------------------------------------------------
@@ -64,10 +69,10 @@
 \begin{subquestion}{Consider the small-world model of Watts and Strogatz with rewiring probability p . The
 		model starts with a regular ring lattice where each node is connected to its ⟨k⟩ / 2 neigh-
 		bors on either side for a total degree of ⟨k⟩ .1 Show that when p = 0 , the overall clustering
-		coefficient of this graph is given by: \\
+		coefficient of this graph is given by: }
 		\begin{equation}
 			C(0) = \frac{{3(k - 2)}}{{4(k - 1)}}
-	\end{equation}}
+		\end{equation}
 	\answer{
 		We know that the global clustering coefficient is given by equation \ref{formula:gc}:
 		\begin{equation}
@@ -122,10 +127,10 @@ N\left( {\begin{array}{*{20}{c}}
 	}
 \end{subquestion}
 
-\begin{subquestion}{Show that when $p > 0$ , the overall clustering coefficient is given by:
-	\begin{equation}
-C(p) \approx \frac{{3(k - 2)}}{{4(k - 1)}}{(1 - p)^3}
-		\end{equation}}
+\begin{subquestion}{Show that when $p > 0$ , the overall clustering coefficient is given by:}
+		\begin{equation}
+		C(p) \approx \frac{{3(k - 2)}}{{4(k - 1)}}{(1 - p)^3}
+	\end{equation}
 	\answer{In this question we refer back to equation \ref{formula:gc} since the degree of nodes isn't dependent on  $p$ the number of connected triples will not change with changing $p$  the only thing that will change is the number of triangles for that case we can make an induction that the number of triangles we have at $p=0$ called $t(0)$ will survive in $p=p_1$ with probability that all 3 triangles edges survive thus $t(p)=t(0)(1-p) ^3$ and for the global clustering coefficient we reach equation \ref{formula:cof}:
 	\begin{equation}
 		\label{formula:cof}
@@ -284,4 +289,79 @@ in a regular lattice nodes are connected only to nearby neighbors so reaching di
 	\end{enumerate}
 \end{subquestion}
 \end{question}
+\begin{question}
+	\questiontext{The Evolution of Random Networks \& Phase Transitions}
+	\begin{subquestion}{Simulating Network Evolution}
+		\answer{
+			The code is provided in q3.ipynb file the logic is implemented in the general helpers section since i don't want this report to get too long i will skip the explanation
+		}
+	\end{subquestion}
+	\begin{subquestion}{Analyzing the Critical Threshold}
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.85\textwidth,keepaspectratio]
+			{imgs/q4_a_plot.png}
+			\caption{The order parameter $S$ and The average size of isolated clusters $\langle s\rangle$
+									versus $\langle k\rangle$}
+			\label{fig:q4_a_plot}
+		\end{figure}
+		\begin{enumerate}
+				\item Identify the critical point $\langle k \rangle_c$ from your simulations. Does the transition occur
+				at the theoretical prediction$\langle k \rangle = 1$ ? Explain any deviations (consider finite-
+				size effects).
+				\answer{
+					From the simulations shown in Figure~\ref{fig:q4_a_plot}, the critical point $\langle k \rangle_c$ can be identified as the value of $\langle k \rangle$ where the order parameter $S = N_G/N$ starts rising sharply and the average size of small clusters $\langle s \rangle$ reaches its maximum which occurs around $\langle k \rangle_c \approx 1$ in a finite network of $N = 1000$ nodes the transition does not occur as abruptly as the theoretical prediction for an infinite network and small deviations from $\langle k \rangle = 1$ are observed These deviations arise due to finite size effects stochastic fluctuations in edge formation  limited total nodes  and the smoothing of the phase transition cause the giant component to emerge slightly earlier or later than the ideal threshold, and the peak of $\langle s \rangle$ is less pronounced than in an infinite system.
+				}
+				\item Examine the plot of $\langle s \rangle$ . Why does the average cluster size diverge (peak)
+				near the critical point and then decrease in the supercritical regime ($\langle k \rangle > 1$ )?
+				Explain the physical meaning of this peak.
+				\answer{
+				The average cluster size $\langle s \rangle$ diverges and reaches a peak near the critical point because at $\langle k \rangle \approx \langle k \rangle_c$  many small clusters begin to merge forming larger clusters without yet creating a single giant component this results in a maximal average size of the remaining small clusters Beyond the critical point ($\langle k \rangle > 1$) a giant component dominates the network absorbing most nodes  and the remaining clusters are small and isolated causing $\langle s \rangle$ to decrease physically the peak in $\langle s \rangle$ reflects the network's transition from a fragmented state to a cohesive system: it signals the point where medium-sized clusters are most abundant just before coalescing into the giant component.This result is also evident in Figure~\ref{fig:q4_a_plot}
+				}
+		\end{enumerate}		
+	\end{subquestion}
+	\begin{subquestion}{Finite Size Effects}
+		\begin{enumerate}
+			\begin{figure}[H]
+				\centering
+				\includegraphics[width=0.85\textwidth,keepaspectratio]
+				{imgs/q4_c_plot.png}
+				\caption{$S$ versus $\langle k\rangle$ Plot for $N = 100$ , $N = 1 , 000$ , and $N = 10 , 000$ }
+				\label{fig:q4_c_plot}
+			\end{figure}
+			\item  Observe the slope of the curve near $\langle k \rangle = 1$. How does the ”sharpness” of the
+			transition change as N increases?
+			\answer{
+			From the Figure~\ref{fig:q4_c_plot}, it is evident that the sharpness of the phase transition increases with network size. For the smallest network ($N = 100$), the rise of $S$ near $\langle k \rangle = 1$ is gradual, indicating a smooth transition. As $N$ increases to $1000$ and $10,000$, the slope of the curve becomes steeper, approaching a nearly vertical jump for the largest network. This behavior illustrates the thermodynamic principle that phase transitions become sharper in the limit $N \rightarrow \infty$, while finite networks exhibit smoothed transitions due to stochastic fluctuations in edge formation.}
+			
+			\item  At $\langle k\rangle = 1$ , does the relative size of the giant component $S$ tend towards
+			zero or a finite value as $N$ increases? Relate this to the theoretical prediction
+			 $N_G \approx N^{\frac{2}{3}}$ at criticality		
+			 \answer{
+			 At the critical point $\langle k \rangle = 1$ as shown in Figure~\ref{fig:q4_c_plot}, the relative size of the giant component $S = N_G/N$ decreases with increasing network size. This is consistent with the theoretical prediction that the size of the largest component at criticality scales as $N_G \sim N^{2/3}$, so the relative size $S \sim N^{-1/3}$ tends toward zero as $N$ grows. In smaller networks, the giant component occupies a noticeable fraction of the nodes at $\langle k \rangle = 1$, whereas in very large networks, it contains many nodes but represents only a vanishing fraction of the total network, reflecting the finite-size effects at criticality.}
+		\end{enumerate}
+	\end{subquestion}
+	\begin{subquestion}{The Critical State}
+		\begin{enumerate}
+			\begin{figure}[H]
+				\centering
+				\includegraphics[width=0.85\textwidth,keepaspectratio]
+				{imgs/q4_d_plot.png}
+				\caption{$P(s)$  vs  $s$ for our data,theory and fitted line on a Log-Log scale here $P(s)$ is the pmf not pdf }
+				\label{fig:q4_d_plot}
+			\end{figure}
+			\item Does the component size distribution follow a power law $P(s) \approx s^{-\alpha}$ ? If so,
+			estimate the exponent $\alpha$.
+			\answer{
+			The component size distribution $P(s)$ for a large Erdos Renyi network at the critical point $\langle k \rangle = 1$ exhibits a clear power law behavior, as seen in the log-log plot of Figure~\ref{fig:q4_d_plot}. Small clusters are most frequent, while larger clusters occur less often, forming a straight-line tail in log-log space. Using logarithmic binning to reduce noise, a linear fit to the tail of the distribution yields an estimated exponent $\alpha \approx 1.51$, indicating that $P(s) \sim s^{-\alpha}$ over several orders of magnitude.
+			}
+			\item  Compare your estimated exponent with the theoretical prediction for random
+			graphs at criticality ( $\alpha = \frac{3}{2}$ ).		
+			\answer{
+			The estimated exponent $\alpha \approx 1.51$ is in excellent agreement with the theoretical prediction for random graphs at criticality $\alpha = 3/2$. This confirms that at the critical point the network is composed of trees of various sizes following a scale free distribution. The power law tail reflects the high variability of cluster sizes where medium and large clusters although less frequent, still contribute significantly to the network's structure, highlighting the unique critical properties of the Erdos-Renyi network.
+			}
+		\end{enumerate}
+	\end{subquestion}
+\end{question}
+
 \end{document}
