--- a/docs/main.tex
+++ b/docs/main.tex
@@ -22,6 +22,7 @@
 \usepackage{amssymb}
 \usepackage{float}  
 \usepackage{subcaption}
+\usepackage{url}
 \input{structure.tex} % Include the file specifying the document structure and custom commands
 
 %----------------------------------------------------------------------------------------
@@ -363,5 +364,15 @@ in a regular lattice nodes are connected only to nearby neighbors so reaching di
 		\end{enumerate}
 	\end{subquestion}
 \end{question}
+
+\newpage
+\begin{thebibliography}{9}  % '9' is enough since you have only one reference
+	
+	\bibitem{chatgpt} 
+	ChatGPT, \textit{Chat session used for assignment guidance}, 
+	\url{https://chatgpt.com/share/69409aea-8c1c-800d-af8b-10e54b089cb6}, accessed December 16, 2025.
+	
+\end{thebibliography}
+
 
 \end{document}
